objects/Subscription_Product__mdt.object
<CustomObject>
    <fields>
        <fullName>ADMIN_CATEGORY__c</fullName>
        <label>ADMIN CATEGORY</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUTO_RENEWABLE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AUTO-RENEWABLE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MS_PRODUCT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MS PRODUCT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRODUCT_AND_ASSESSMENT_FAMILY__c</fullName>
        <label>PRODUCT AND ASSESSMENT FAMILY</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RECORD_TYPE__c</fullName>
        <label>RECORD TYPE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RENEWABLE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RENEWABLE</label>
        <type>Checkbox</type>
    </fields>
    <label>Subscription Product</label>
    <listViews>
        <fullName>ALL_products</fullName>
        <columns>MasterLabel</columns>
        <columns>Product_Name__c</columns>
        <columns>RENEWABLE__c</columns>
        <columns>AUTO_RENEWABLE__c</columns>
        <columns>MS_PRODUCT__c</columns>
        <columns>PRODUCT_AND_ASSESSMENT_FAMILY__c</columns>
        <columns>ADMIN_CATEGORY__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL products</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Subscription Products</pluralLabel>
</CustomObject>